i put the asterix, fixed the zip code verification, now it will only save into the database if the number and zip code are in valid format, also fixed the index file

--- a/style.css
+++ b/style.css
@@ -67,6 +67,13 @@ label {
   color: #f5f5f5;
   display: block;
   font-size: 15px;
+  position: relative;
+}
+
+label .asterisk {
+  color: #d4af7f;
+  margin-right: 6px;
+  font-weight: bold;
 }
 
 /* === INPUTS === */
